    * Open MPI (with Slurm's PMI2 and PMIx plugins) and
    * Intel MPI (with Slurm's PMI2 plugin)
    * No support for Cray systems at this time.
 -- Add Slurm configuration file check logic using "slurmctld -t" command.

RPMBUILD CHANGES
================

CONFIGURATION FILE CHANGES (see man appropriate man page for details)
=====================================================================
 -- Add "GetSysStatus" option to burst_buffer.conf file. For burst_buffer/cray
    this would indicate the location of the "dwstat" command.
 -- Add node and partition configuration options of "CpuBind" to control default
    task binding. Modify the scontrol to report and modify these parameters.
 -- Add "NumaCpuBind" option to knl.conf file to automatically change a node's
    CpuBind parameter based upon changes to a node's NUMA mode.
 -- Remove support for "ChosLoc" configuration parameter.

COMMAND CHANGES (see man pages for details)
===========================================
 -- Add sbatch "--batch" option to identify features required on batch node.
    For example "sbatch --batch=haswell ...".
 -- Report cgroup and NodeFeatures plugin configuration with scontrol and
    sview commands.

OTHER CHANGES
=============

API CHANGES
===========

Changed members of the following structs
========================================

Added members to the following struct definitions
=================================================

Added the following struct definitions
======================================

Removed members from the following struct definitions
=====================================================

Changed the following enums and #defines
========================================

Added the following API's
=========================

Changed the following API's
============================

Removed the following API's
===========================
 -- Removed slurm_xslurm_strerrorcat() function.
 -- Removed slurm_xstrstrip() function.